--- a/src/template.html
+++ b/src/template.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Webpack Starter</title>
-  <script defer src="bundle.js"></script></head>
+    <title><%= htmlWebpackPlugin.options.title %></title>
+  </head>
   <body>
     <div class="container">
       <h3>Don't remove this</h3>
+      <div id="advice"></div>
+      <button id="adviceBtn">Generate advice!</button>
     </div>
   </body>
 </html>
