Added image support.

--- a/src/template.html
+++ b/src/template.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <div class="container">
+      <img id="brainImg" alt="" />
       <h3>Don't remove this</h3>
       <div id="advice"></div>
       <button id="adviceBtn">Generate advice!</button>
